Hiển thị và thay đổi thông tin khách hàng

--- a/MaleFashion/css/style.css
+++ b/MaleFashion/css/style.css
@@ -3849,3 +3849,14 @@ ol {
 		height: 250px;
 	}
 }
+
+.btnLuuThayDoi {
+	border: 1px solid #e1e1e1;
+	background: white;
+	cursor: pointer;
+	padding: 14px 34px;
+	color: #111111;
+	font-weight: 700;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
